--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  background-color: rgb(30, 29, 31);
 }
 
 .container {
@@ -55,7 +56,7 @@ body {
 }
 
 .task {
-  background: #f4f4f4;
+  background: #7a7777;
   margin: 5px;
   padding: 10px 20px;
   cursor: pointer;
