--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ body {
   border: 1px solid steelblue;
   padding: 30px;
   border-radius: 5px;
+  color: rgb(182, 25, 116);
 }
 
 .header {
@@ -26,11 +27,13 @@ body {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
+  color: #7a7777;
 }
-.btn-block {
+/* .btn-block {
   display: block;
   width: 100%;
-}
+  commented this cos wasn't working
+} */ 
 
 .btn {
   display: inline-block;
@@ -43,7 +46,7 @@ body {
   cursor: pointer;
   text-decoration: none;
   font-size: 15px;
-  font-family: inherit;
+  /* font-family: inherit; */
 }
 
 .btn:focus {
